@@ -485,9 +485,18 @@ function removeComments(html) {
 	return html;
 }
 
+var CC = 0;
+
 function parseHTML(html, trim, onerror, isxml) {
 
 	var makeText = function(parent, str) {
+
+		if (str === 'hello world 5')
+			CC++;
+
+		if (CC === 2)
+			throw new Error('FET');
+
 		var obj = new HTMLElement();
 		obj.xml = isxml;
 		obj.tagName = 'TEXT';
@@ -658,8 +667,9 @@ function parseHTML(html, trim, onerror, isxml) {
 		if (str && str.indexOf('<') === -1) {
 			if (trim)
 				str = str.trim();
-			if (str)
-				parent.children.push(makeText(parent, str));
+
+			// Commented because it inserts the same textContent twice
+			// str && parent.children.push(makeText(parent, str));
 		}
 
 		return str;
