@@ -32,6 +32,7 @@
 - fixed assigning the `name` field in FlowStream
 - fixed prerendering UI after manual using `Flow.add()` method
 - added `Array.group(key)` method
+- fixed `HTMLParser` by [Marek Mraz](https://github.com/Mrazbb)
 
 ========================
 0.0.5
